fix #14054783 - org names overlapping on ie7 & linux ffox

--- a/app/stylesheets/partials/_app.sass
+++ b/app/stylesheets/partials/_app.sass
@@ -49,7 +49,7 @@ body.app
       position: absolute
       text-decoration: none
       text-transform: uppercase
-      width: 300px
+      width: 400px
       +opacity(0.8)
       +text-shadow(#000, 0, 1px, 1px)
       &:hover
